--- a/api/package.json
+++ b/api/package.json
@@ -6,13 +6,17 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
     "http-errors": "~1.6.3",
+    "is_js": "^0.9.0",
+    "moment": "^2.30.1",
     "mongoose": "^8.7.1",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "winston": "^3.15.0"
   }
 }
