--- a/api/package.json
+++ b/api/package.json
@@ -18,5 +18,10 @@
     "mongoose": "^8.7.1",
     "morgan": "~1.9.1",
     "winston": "^3.15.0"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.13.0",
+    "eslint": "^9.13.0",
+    "globals": "^15.11.0"
   }
 }
